# agentic-distill

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: dataset_format.yaml  project_review.md  qa_checklist.md  qa_checklist.zh-CN.md
scripts/: generate_cases.py  run_distillation.py
src/agentic_distill/: __init__.py  config.py  question_bank.py  review.py  storage.py  teacher.py  types.py  utils.py
src/agentic_distill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentic_distill/generators/: __init__.py  base.py  mcp.py  telecom.py  terminal.py
src/agentic_distill/generators/prompts/: telecom_case_generation.md  telecom_case_review.md  terminal_case_generation.md  terminal_case_review.md
src/agentic_distill/pipelines/: __init__.py  agentic.py
tests/: conftest.py  test_episode_serialization.py  test_review.py
